# hangman-haskell

./: LICENSE  hangman.cabal
src/: Main.hs
test/: Spec.hs
