name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/thinkmpink/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
copyright:           Michael Pinkham 2019
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     data/dict.txt

library
  hs-source-dirs:      src
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hangman-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , QuickCheck

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , hangman
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
